[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mempliance-mcp"
version = "0.1.0"
description = "Mempliance MCP server — persistent user memory for any MCP-compatible AI agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "memory", "ai", "agent", "mempliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mempliance-mcp = "mempliance_mcp.server:main"

[project.urls]
Homepage = "https://mempliance.ai"
Documentation = "https://mempliance.ai/docs/integrations/mcp"
Repository = "https://github.com/sachinmalpe/mempliance-mcp"
"Issue Tracker" = "https://github.com/sachinmalpe/memory-compliance-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mempliance_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "pyproject.toml"]
